== Changelog ==

= 2.1.7 =
* Fixed: No longer cancel agreements in Vipps/MobilePay immediately. Cancel them at the next renewal date instead. This allows reserved payments to be triggered.

= 2.1.6 =
* Fixed: Made subscription creations more robust when attempting to pay using Checkout and an early or manual renewal.
* Added: Support passing an MSN to our webhook API methods.
* Fixed: Do not load recurring if the customer is using HF Subscriptions, which also creates a WC_Subscriptions class.
* Fixed: Increased the time it takes to delete inactive orders to two hours. Added logs and an order note as well.
* Fixed: Create a new subscription if it's missing when completing a checkout order. This can happen if the session has been recovered.

= 2.1.5 =
* Fixed: Always find subscription via the agreementId on a recurring agreement webhook. This fixes ending an agreement in the app once and for all, as the logic is now the same regardless of the agreement's age.
* Fixed: Charge webhooks were also using the external ids instead of the charge id, this could cause an error too.
* Fixed: Do not replace the billing email address of the user when the user is already signed in pre-Checkout.
* Added: A new filter for overriding which countries are supported by recurring Checkout: `woo_vipps_recurring_checkout_countries($countries, $order_id)`.

= 2.1.4 =
* Fixed: Actually fixed abandoned Checkout orders not being deleted this time.
* Fixed: Payments towards a failed renewal order are now possible.
* Fixed: When using Checkout it will no longer tell you that you already have a subscription when you haven't paid yet.

= 2.1.3 =
* Fixed: We were still using calls to `get_posts` a few places, which was incompatible with WooCommerce HPOS. This fixes gateway changes, in-app description updates, and in-app subscription cancellation for installations using HPOS.