@@ -2,6 +2,7 @@
 
 = 2.1.7 =
 * Fixed: No longer cancel agreements in Vipps/MobilePay immediately. Cancel them at the next renewal date instead. This allows reserved payments to be triggered.
+* Fixed: Set our fake anonymous user id from email if we cannot create a user. This prevents potential 500 errors during checkout.
 
 = 2.1.6 =
 * Fixed: Made subscription creations more robust when attempting to pay using Checkout and an early or manual renewal.
